3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/spell_util.c: SP_level_spellpoint_cost() - never have a spell
  cost 0 spellpoints due to attunement or other bonuses - spell always
  cost at least 1 sp/grace.
server/main.c: Fix process_events() so it doesn't purge removed players
  from the list - players get in the removed state at play again
  prompt.
server/apply.c: Fix fix_auto_apply() so we don't generate additional
  spells for spellcasting objects that already have them (regression
  from fix from 5/11 below)
MSW 2004-05-13

server/pets.c: Fix summon golem, summon pet monsters so that the summoned
   monsters are not worth any exp.  Fixes bugs were players could
   summon monsters and then kill them.
server/skills.c: Fix do_skill_detect_curse() and do_skill_detect_magic()
   so that they don't process objects the player is incapable of picking
   up (eg, floors).  Fixes experience exploit.
server/apply.c: modify fix_auto_apply() so that it properly generates
   items for creatures that start with objects in their inventory.
MSW 2004-05-11

server/spell_util.c: Fix cast_spell() so that failed spells (due to
  encumberance or other penalties) still cost some random number of grace/
  mana points.
MSW 2004-05-10

common/treasure.c: Change the loading of the artifacts file to actually
  calloc() the object - reset_object() doesn't clear all the values,
  like active_next, active_prev, so better to just do it there.
server/main.c: Add code in process_events() that checks for removed objects -
   have seen occasional crashes caused by them.
MSW 2004-05-08

Armor enchantment now uses setting values.
common/init.c: new values to init in settings.