@@ -17,6 +17,15 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+Added a new item type: ground positioning system (GPS).
+This lets a player know his/her location in the world.
+Only works in 'world_xxx_xxx' maps.
+
+include/define.h: add new item type, 'GPS' (162).
+include/sproto.h: add new function, 'apply_positioning_system'.
+server/apply.c: handle new item type.
+Ryo 2004-05-15
+
 server/spell_util.c: SP_level_spellpoint_cost() - never have a spell
   cost 0 spellpoints due to attunement or other bonuses - spell always
   cost at least 1 sp/grace.
